--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "start:dev": "LOCAL=true ts-node server.ts",
+    "start:dev": "LOCAL=true nodemon server.ts",
     "postinstall": "tsc"
   },
   "author": "your name here",
@@ -17,10 +17,11 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
-    "@types/cors": "^2.8.9",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "nodemon": "^2.0.15"
   }
 }
