--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node dist/server.js",
     "start:dev": "LOCAL=true nodemon server.ts",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "format": "prettier --write server.ts",
+    "format:check": "prettier --check server.ts",
+    "lint": "eslint server.ts",
+    "typecheck": "tsc --noEmit"
   },
   "author": "your name here",
   "license": "ISC",
@@ -20,8 +24,10 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
+    "eslint": "^8.4.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3",
-    "nodemon": "^2.0.15"
+    "typescript": "^4.1.3"
   }
 }
