--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "^8.4.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
