--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/pg": "^7.14.7",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "^8.4.0",
+    "eslint-plugin-react": "^7.27.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.1",
