--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "your name here",
   "license": "ISC",
   "dependencies": {
+    "@typescript-eslint/parser": "^5.5.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
