--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write server.ts",
     "format:check": "prettier --check server.ts",
     "lint": "eslint server.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "your name here",
   "license": "ISC",
@@ -24,12 +26,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/jest": "^27.0.3",
     "@types/pg": "^7.14.7",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "eslint": "^8.4.0",
     "eslint-plugin-react": "^7.27.1",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "supertest": "^6.1.6",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
